--- a/src/frontend/locales/en.json
+++ b/src/frontend/locales/en.json
@@ -61,6 +61,14 @@
         "calendar": "Match Calendar",
         "upcoming_games": "Upcoming Games",
         "past_games": "Past Games",
+        "no_friends": "No friends.",
+        "no_past_games": "No past games.",
+        "no_upcoming_games": "No upcoming games.",
+        "finished": "Finished",
+        "won": "Won",
+        "elo_rating": "ELO Rating",
+        "request_sent": "Request Sent",
+        "accept_request": "Accept Request",
         "report_modal_title": "Report User",
         "report_reason": "Reason...",
         "report_submit": "Submit Report"
