--- a/src/frontend/locales/it.json
+++ b/src/frontend/locales/it.json
@@ -61,6 +61,14 @@
         "calendar": "Calendario partite",
         "upcoming_games": "Prossime Partite",
         "past_games": "Partite Concluse",
+        "no_friends": "Nessun amico.",
+        "no_past_games": "Nessuna partita passata.",
+        "no_upcoming_games": "Nessuna partita futura.",
+        "finished": "Finita",
+        "won": "Vittoria",
+        "elo_rating": "Punteggio ELO",
+        "request_sent": "Richiesta Inviata",
+        "accept_request": "Accetta Richiesta",
         "report_modal_title": "Segnala Utente",
         "report_reason": "Motivazione...",
         "report_submit": "Invia Report"
