Refactoring delle Componenti e file css

--- a/src/vue-frontend/src/locales/de.json
+++ b/src/vue-frontend/src/locales/de.json
@@ -170,6 +170,8 @@
     "table_remaining": "Verbleibende Dauer",
     "edit_place_title": "Ort bearbeiten",
     "save_changes": "Änderungen speichern",
+    "no_reports": "Keine Meldungen",
+    "no_banned_users": "Kein Benutzer gesperrt",
     "ban_user_title": "Benutzer sperren",
     "ban_duration": "Dauer",
     "ban_reason": "Grund",
