--- a/src/vue-frontend/src/locales/en.json
+++ b/src/vue-frontend/src/locales/en.json
@@ -170,6 +170,8 @@
     "table_remaining": "Remaining Duration",
     "edit_place_title": "Edit Place",
     "save_changes": "Save Changes",
+    "no_reports": "No reports",
+    "no_banned_users": "No banned users",
     "ban_user_title": "Ban User",
     "ban_duration": "Duration",
     "ban_reason": "Reason",
