--- a/src/vue-frontend/src/locales/it.json
+++ b/src/vue-frontend/src/locales/it.json
@@ -170,6 +170,8 @@
     "table_remaining": "Durata Rimanente",
     "edit_place_title": "Modifica Luogo",
     "save_changes": "Salva Modifiche",
+    "no_reports": "Nessuna segnalazione",
+    "no_banned_users": "Nessun utente bannato",
     "ban_user_title": "Banna Utente",
     "ban_duration": "Durata",
     "ban_reason": "Motivazione",
