--- a/src/vue-frontend/src/locales/it.json
+++ b/src/vue-frontend/src/locales/it.json
@@ -212,6 +212,7 @@
     "no_results": "Nessun risultato trovato",
     "users": "Utenti",
     "places": "Luoghi",
+    "all":"Tutto",
     "error": "Errore durante la ricerca"
   },
   "game_popup": {
