--- a/src/vue-frontend/src/locales/en.json
+++ b/src/vue-frontend/src/locales/en.json
@@ -210,6 +210,7 @@
     "no_results": "No results found",
     "users": "Users",
     "places": "Places",
+    "all":"All",
     "error": "Error during search"
   },
   "game_popup": {
