--- a/src/vue-frontend/src/locales/de.json
+++ b/src/vue-frontend/src/locales/de.json
@@ -95,7 +95,6 @@
   },
   "dashboard": {
     "recent_activity": "Letzte Aktivitäten",
-
     "games": "Spiele",
     "player_role": "Spieler",
     "feed_error": "Feed konnte nicht geladen werden.",
@@ -122,7 +121,8 @@
     "all_sports": "Alle Sportarten",
     "all_places": "Alle Einrichtungen",
     "sport": "Nach Sportart filtern",
-    "place": "Nach Einrichtung filtern"
+    "place": "Nach Einrichtung filtern",
+    "status": "Status"
   },
   "leaderboard": {
     "title": "Bestenliste",
